--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <meta property="og:title" content="Data Professional Portfolio | Data Analysis & BI" />
     <meta property="og:description" content="Portfolio showcasing expertise in data analysis, business intelligence, and machine learning" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://portfolio-silk-three-p7aj0y3vcw.vercel.app" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://portfolio-silk-three-p7aj0y3vcw.vercel.app" />
   </head>
 
   <body>
