Meta data improved

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <meta property="og:title" content="Data Professional Portfolio | Data Analysis & BI" />
     <meta property="og:description" content="Portfolio showcasing expertise in data analysis, business intelligence, and machine learning" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://portfolio-silk-three-p7aj0y3vcw.vercel.app/og-image.png" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:url" content="https://portfolio-silk-three-p7aj0y3vcw.vercel.app" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://portfolio-silk-three-p7aj0y3vcw.vercel.app/og-image.png" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
