Updated MetaData for linkedIn preview final

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Data Professional Portfolio | Data Analysis & Business Intelligence</title>
     <meta name="description" content="Portfolio showcasing expertise in data analysis, business intelligence, and machine learning. Transforming raw data into actionable insights." />
     <meta name="author" content="Data Professional" />
-
+    
+    <meta name="image" property="og:image" content="https://portfolio-silk-three-p7aj0y3vcw.vercel.app/og-image.png" />
     <meta property="og:title" content="Data Professional Portfolio | Data Analysis & BI" />
     <meta property="og:description" content="Portfolio showcasing expertise in data analysis, business intelligence, and machine learning" />
     <meta property="og:type" content="website" />
