Updated Meta data

--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Professional Portfolio | Data Analysis & Business Intelligence</title>
-    <meta name="description" content="Portfolio showcasing expertise in data analysis, business intelligence, and machine learning. Transforming raw data into actionable insights." />
-    <meta name="author" content="Data Professional" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Data Professional Portfolio | Data Analysis & Business Intelligence</title>
 
-    <meta name="image" property="og:image" content="https://portfolio-silk-three-p7aj0y3vcw.vercel.app/og-image.png" />
-    <meta property="og:title" content="Data Professional Portfolio | Data Analysis & BI" />
-    <meta property="og:description" content="Portfolio showcasing expertise in data analysis, business intelligence, and machine learning" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://portfolio-silk-three-p7aj0y3vcw.vercel.app" />
+  <!-- SEO -->
+  <meta name="description" content="Portfolio showcasing expertise in data analysis, business intelligence, and machine learning. Transforming raw data into actionable insights." />
+  <meta name="author" content="Vibhav Kaushik" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/og-image.png" />
-  </head>
+  <!-- Open Graph (LinkedIn, FB) -->
+  <meta property="og:title" content="Data Professional Portfolio | Data Analysis & BI" />
+  <meta property="og:description" content="Portfolio showcasing expertise in data analysis, business intelligence, and machine learning. Includes interactive dashboards, ML demos, and web projects." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://portfolio-silk-three-p7aj0y3vcw.vercel.app/" />
+  <!-- IMPORTANT: use absolute URL + version to bust cache -->
+  <meta property="og:image" content="https://portfolio-silk-three-p7aj0y3vcw.vercel.app/og-image.png?v=2" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Data Professional Portfolio | Data Analysis & BI" />
+  <meta name="twitter:description" content="Portfolio showcasing data analytics, BI and ML projects." />
+  <meta name="twitter:image" content="https://portfolio-silk-three-p7aj0y3vcw.vercel.app/og-image.png?v=2" />
+</head>
+
 
   <body>
     <div id="root"></div>
